@@ -8,6 +8,8 @@ import org.jsoup.select.Elements;
 import java.io.IOException;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public class BellParser {
     private final String url;
@@ -25,76 +27,116 @@ public class BellParser {
         BellsData data = new BellsData();
         try {
             Document doc = Jsoup.connect(url)
-                    .userAgent("Mozilla/5.0")
-                    .timeout(10000)
+                    .userAgent("Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36")
+                    .timeout(15000)
                     .get();
 
-            Elements tables = doc.select("div.item-page table");
+            Elements tables = doc.select("table");
 
             if (tables.isEmpty()) {
-                System.err.println("No schedule tables found");
+                System.err.println("Таблицы с расписанием звонков не найдены по адресу: " + url);
                 return data;
             }
 
-            parseUsuallySchedule(tables.get(0), data.normal);
-
-            if (tables.size() >= 2) {
-                parseMondaySchedule(tables.get(1), data.monday);
-            } else {
-                System.err.println("Monday schedule table not found");
+            int tableIndex = 0;
+            for (Element table : tables) {
+                parseTable(table, data, tableIndex);
+                tableIndex++;
             }
 
+            if (data.normal.isEmpty() && !data.monday.isEmpty()) data.normal.putAll(data.monday);
+            if (data.monday.isEmpty() && !data.normal.isEmpty()) data.monday.putAll(data.normal);
+
         } catch (IOException e) {
-            System.err.println("Error parsing bells: " + e.getMessage());
+            System.err.println("Ошибка при парсинге звонков с " + url + ": " + e.getMessage());
         }
         return data;
     }
 
-    private void parseUsuallySchedule(Element table, Map<Integer, String> map) {
-        Elements rows = table.select("tr");
-        int pairCounter = 1;
-
-        for (int i = 0; i < rows.size(); i++) {
-            if (i % 2 == 0) {
-                String period = extractPeriodText(rows.get(i));
-                if (period != null && !period.isEmpty()) {
-                    map.put(pairCounter, period);
-                    pairCounter++;
-                }
-            }
-        }
-    }
-
-    private void parseMondaySchedule(Element table, Map<Integer, String> map) {
+    private void parseTable(Element table, BellsData data, int tableIndex) {
         Elements rows = table.select("tr");
         if (rows.isEmpty()) return;
 
-        String firstPeriod = extractPeriodText(rows.getFirst());
-        if (firstPeriod != null && !firstPeriod.isEmpty()) {
-            map.put(0, firstPeriod);
+        int colMonday = -1;
+        int colNormal = -1;
+
+        Elements headers = rows.get(0).select("th, td");
+        for (int i = 0; i < headers.size(); i++) {
+            String text = headers.get(i).text().toLowerCase();
+            if (text.contains("понедельник")) colMonday = i;
+            if (text.contains("вторник") || text.contains("остальные") || text.contains("обычн") || text.contains("основн")) colNormal = i;
         }
 
-        int pairCounter = 1;
+        boolean contextIsMonday = false;
+        boolean contextIsNormal = false;
+        if (colMonday == -1 && colNormal == -1) {
+            Element prev = table.previousElementSibling();
+            for (int i = 0; i < 3 && prev != null; i++) {
+                String pt = prev.text().toLowerCase();
+                if (pt.contains("понедельник")) { contextIsMonday = true; break; }
+                if (pt.contains("вторник") || pt.contains("обычное") || pt.contains("основное")) { contextIsNormal = true; break; }
+                prev = prev.previousElementSibling();
+            }
+        }
 
-        for (int i = 1; i < rows.size(); i++) {
-            if (i % 2 != 0) {
-                String period = extractPeriodText(rows.get(i));
-                if (period != null && !period.isEmpty()) {
-                    map.put(pairCounter, period);
-                    pairCounter++;
+        Pattern timePattern = Pattern.compile("(\\d{1,2}[:.]\\d{2}\\s*[-–—]\\s*\\d{1,2}[:.]\\d{2})");
+
+        for (int r = 0; r < rows.size(); r++) {
+            Elements cells = rows.get(r).select("td, th");
+            if (cells.size() < 2) continue;
+
+            String pairText = cells.get(0).text().trim().toLowerCase();
+            int pairNum = extractPairNumber(pairText);
+            
+            if (pairNum == -1 && !pairText.matches(".*\\d.*")) continue; 
+
+            if (colMonday != -1 && cells.size() > colMonday) {
+                String time = extractTime(cells.get(colMonday).text(), timePattern);
+                if (time != null) data.monday.put(pairNum, time);
+            }
+            if (colNormal != -1 && cells.size() > colNormal) {
+                String time = extractTime(cells.get(colNormal).text(), timePattern);
+                if (time != null) data.normal.put(pairNum, time);
+            }
+
+            if (colMonday == -1 && colNormal == -1) {
+                if (cells.size() == 2) {
+                    String time = extractTime(cells.get(1).text(), timePattern);
+                    if (time != null) {
+                        if (contextIsMonday) {
+                            data.monday.put(pairNum, time);
+                        } else if (contextIsNormal) {
+                            data.normal.put(pairNum, time);
+                        } else {
+                            if (tableIndex == 0) data.normal.put(pairNum, time);
+                            else data.monday.put(pairNum, time);
+                        }
+                    }
+                } else if (cells.size() >= 3) {
+                    String time1 = extractTime(cells.get(1).text(), timePattern);
+                    String time2 = extractTime(cells.get(2).text(), timePattern);
+
+                    if (time1 != null) data.monday.put(pairNum, time1);
+                    if (time2 != null) data.normal.put(pairNum, time2);
                 }
             }
         }
     }
 
-    private String extractPeriodText(Element row) {
-        Elements cells = row.select("td");
-        if (cells.size() <= 1) return null;
+    private int extractPairNumber(String text) {
+        if (text.contains("классный") || text.contains("разговоры")) return 0;
+        Matcher m = Pattern.compile("(\\d+)").matcher(text);
+        if (m.find()) {
+            return Integer.parseInt(m.group(1));
+        }
+        return -1;
+    }
 
-        String text = cells.get(1).text();
-
-        return text.trim()
-                .replace("\n", " ")
-                .replaceAll("\\s+", " ");
+    private String extractTime(String text, Pattern pattern) {
+        Matcher m = pattern.matcher(text);
+        if (m.find()) {
+            return m.group(1).replace(".", ":").replaceAll("\\s*[-–—]\\s*", "-");
+        }
+        return null;
     }
 }
